--- a/app/globals.css
+++ b/app/globals.css
@@ -122,3 +122,14 @@ h4 {
   font-weight: 900 !important;
   border-radius: 12px;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
